--- a/CustomerChat/Views/Request/Create.cshtml
+++ b/CustomerChat/Views/Request/Create.cshtml
@@ -78,6 +78,7 @@
 
 <script type="text/javascript" >
     $(function () {
-        alert("Estoy acá!")
+        $('#menu').css('display', 'none');
+        $('#login').css('display', 'none');
     });
 </script>
