--- a/CustomerChat/Views/Shared/_Layout.cshtml
+++ b/CustomerChat/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
+                            <li>@Html.ActionLink("Agents", "Index", "Agent")</li>
                             <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                         </ul>
                     </nav>
